<resources>
    <string name="app_name">B&amp;Y</string>
    <string name="et_sign_in_activity_email_hint">E-mail</string>
    <string name="et_sign_in_activity_password_hint">Mot de passe</string>
    <string name="btn_sign_in_activity_sign_in_text">Connexion</string>
    <string name="btn_sign_in_activity_facebook_sign_in_text">Connexion avec Facebook</string>
    <string name="btn_sign_in_activity_create_new_account_text">Inscription</string>
    <string name="tv_sign_in_activity_forget_password_text">Mot de passe oublié ?</string>
    <string name="sign_in_activity_toast_message_email_is_required">Le courriel est requis</string>
    <string name="sign_in_activity_toast_message_invalid_email">Email invalide</string>
    <string name="sign_in_activity_toast_message_password_is_required">Mot de passe requis</string>
    <string name="sign_in_activity_toast_message_no_internet_connection">Pas de connexion Internet</string>
    <string name="sign_in_activity_toast_message_wrong_email_or_wrong_password">Mauvais courriel ou mot de passe erroné</string>
    <string name="sign_in_activity_toast_message_problem_sign_in_try_again_later">Problème de connexion, réessayez plus tard</string>
    <string name="et_sign_up_activity_first_name_text">Prénom</string>
    <string name="et_sign_up_activity_family_name_text">Nom</string>
    <string name="et_sign_up_activity_email_hint">E-mail</string>
    <string name="et_sign_up_activity_mobile_number_hint">Numéro de téléphone</string>
    <string name="et_sign_up_activity_password_hint">Mot de passe</string>
    <string name="et_sign_up_activity_retype_password_hint">Confirmez</string>
    <string name="btn_sign_up_activity_sign_up_text">Inscription</string>
    <string name="btn_sign_up_activity_facebook_sign_up_text">Inscription avec Facebook</string>
    <string name="sign_up_activity_toast_message_first_name_is_required">Le prénom est requis</string>
    <string name="sign_up_activity_toast_message_family_name_is_required">Nom de famille est requis</string>
    <string name="sign_up_activity_toast_message_email_is_required">Le courriel est requis</string>
    <string name="sign_up_activity_toast_message_invalid_email">Email invalide</string>
    <string name="sign_up_activity_toast_message_mobile_number_is_required">Numéro de mobile est requis</string>
    <string name="sign_up_activity_toast_message_invalid_mobile_number">Numéro de portable invalide</string>
    <string name="sign_up_activity_toast_message_password_is_required">Mot de passe requis</string>
    <string name="sign_up_activity_toast_message_password_is_at_least_6_chars">Le mot de passe doit être au moins de 6 caractères</string>
    <string name="sign_up_activity_toast_message_retyped_password_is_required">Mot de passe re-tapé est requis</string>
    <string name="sign_up_activity_toast_message_password_and_retyped_password_do_not_match">Mot de passe et Retaper le mot de passe ne correspondent pas</string>
    <string name="sign_up_activity_toast_message_account_already_exists">Le compte existe déjà</string>
    <string name="sign_up_activity_toast_message_problem_sign_up_try_again_later">Problème d\'inscription, réessayez plus tard</string>
    <string name="tv_home_search_text">Chercher</string>
    <string name="tv_good_morning_label_text">Bonjour</string>
    <string name="btn_home_current_location_text">Position actuelle</string>
    <string name="tv_see_all_text">Voir tous</string>
    <string name="btn_search_fragment_map_text">Carte</string>
    <string name="btn_search_fragment_filter_text">Filtre</string>
    <string name="btn_search_fragment_list_text">Liste</string>
    <string name="tv_reserve_fragment_my_reservations_label_text">Mes réservations</string>
    <string name="tv_reserve_fragment_up_coming_reservations_label_text">Les bons moments à venir</string>
    <string name="tv_reserve_fragment_previous_reservations_label_text">Mes anciennes résas</string>
    <string name="tv_reserve_fragment_error_message_text">Aucune réservations pour la moment</string>
    <string name="btn_reserve_alert_dialog_cancel_text">Annuler</string>
    <string name="btn_reserve_alert_dialog_edit_text">Modifier</string>
    <string name="btn_reserve_alert_dialog_call_text">Appeler</string>
    <string name="tv_my_profile_label_text">Mon Profil</string>
    <string name="tv_profile_favourite_restaurants_label_text">Restaurants favoris</string>
    <string name="tv_profile_fragment_user_name_text">paramètres</string>
    <string name="tv_profile_settings_label_text">Réglages</string>
    <string name="tv_profile_settings_account_info_label_text">Infos du compte</string>
    <string name="tv_profile_settings_about_by_hallal_label_text">À propos</string>
    <string name="tv_profile_settings_language_label_text">Langue</string>
    <string name="tv_profile_settings_language_english_label_text">English</string>
    <string name="tv_profile_settings_language_french_label_text">Français</string>
    <string name="tv_profile_settings_sign_out_text">Déconnexion</string>
    <string name="tv_profile_acc_info_my_info_label_text">Mes informations</string>
    <string name="tv_profile_acc_info_first_name_label_text">Prénom</string>
    <string name="tv_profile_acc_info_last_name_label_text">Nom</string>
    <string name="tv_profile_acc_info_email_label_text">E-mail</string>
    <string name="tv_profile_acc_info_phone_number_label_text">Numéro</string>
    <string name="tv_profile_acc_info_password_label_text">Mot de passe</string>
    <string name="tv_profile_acc_info_confirm_password_label_text">Confirmez le mot de passe</string>
    <string name="tv_profile_acc_info_edit_text">Modifier</string>
    <string name="tv_profile_acc_info_save_text">enregistrer</string>
    <string name="tv_about_halal_about_by_halal_label_text">À propos</string>
    <string name="tv_about_halal_confidentiality_policies_label_text">Politique de confidentialité</string>
    <string name="tv_about_halal_conditions_of_utilization_label_text">Conditions d\'utilisations</string>
    <string name="tv_about_halal_help_and_assistance_label_text">Aide et assistance</string>
    <string name="favourite_restaurants_activity_my_profile_label_text">Mon profil</string>
    <string name="favourite_restaurants_activity_favourite_restaurants_label_text">Restaurants favoris</string>
    <string name="tv_favourite_restaurants_activity_error_message_text">Il n\'y a pas de favoris</string>
    <string name="tv_layout_filter_sort_and_filter_label_text">Trier &amp; Filtrer</string>
    <string name="tv_layout_filter_price_layout_price_label_text">Prix</string>
    <string name="tv_layout_filter_sort_by_layout_sort_by_label_text">Trier par</string>
    <string name="tv_layout_filter_reset_text">Effacer</string>
    <string name="btn_layout_filter_show_options_text">Voir les restaurants</string>
    <string name="tv_menu_activity_menu_label_text">Menu</string>
    <string name="tv_checkout_order_checkout_order_label_text">Réserver</string>
    <string name="tv_dialog_quantity_label_quantity">Quantité</string>
    <string name="tv_dialog_add_text">Ajouter</string>
    <string name="tv_time_label_text">Horaires</string>
    <string name="tv_calendar_layout_number_of_people_label_text">Nombre de personnes</string>
    <string name="tv_calendar_layout_no_capacity_message_text">Le restaurant est complet pour cette heure</string>
    <string name="tv_calendar_layout_restaurant_is_closed_message_text">Votre restaurant est fermé aujourd’hui</string>
    <string name="btn_calendar_layout_reserve_text">Réserver</string>
    <string name="btn_calendar_layout_place_an_order_text">Ajouter son menu</string>
    <string name="tv_cuisine_label_text">Cuisine</string>
    <string name="tv_executive_chef_label_text">Chef</string>
    <string name="tv_neighbourhood_label_text">Ville</string>
    <string name="tv_restaurant_profile_certifications_label_text">Certifications</string>
    <string name="tv_visitors_label_text">Clients Satisfaits</string>
    <string name="tv_certificate_label_text">Organisme de certification</string>
    <string name="tv_wine_label_text">Alcool</string>
    <string name="tv_restaurant_profile_additional_information_label_text">Informations du restaurant</string>
    <string name="tv_restaurant_menu_label_text">Menu</string>
    <string name="tv_restaurant_website_label_text">Site Web</string>
    <string name="tv_restaurant_working_hours_label_text">Horaires</string>
    <string name="tv_restaurant_profile_notes_label_text">Notes</string>
    <string name="tv_search_restaurant_header_label_text">Rechercher</string>
    <string name="et_search_restaurant_search_text_hint">Rechercher</string>
    <string name="tv_search_restaurant_location_text">Localisation actuelle</string>
    <string name="tv_search_restaurant_select_city_text">Sélectionnez une ville</string>
    <string name="tv_search_restaurant_all_restaurants_label_text">Tous les restaurants</string>
    <string name="tv_search_restaurant_my_favourites_label_text">Mes favoris</string>
    <string name="btn_search_restaurant_search_text">Rechercher</string>
    <string name="tv_select_location_activity_select_location_label_text">Votre position</string>
    <string name="tv_select_location_activity_current_location_text">Position actuelle</string>
    <string name="tv_select_location_activity_select_a_location_label_text">Choisissez une ville</string>
    <string name="tv_submit_reservation_activity_number_of_people_text">Personnes</string>
    <string name="tv_submit_reservation_activity_client_details_label_text">Vos Informations</string>
    <string name="tv_submit_reservation_activity_first_name_label_text">Prénom</string>
    <string name="tv_submit_reservation_activity_last_name_label_text">Nom</string>
    <string name="tv_submit_reservation_activity_phone_number_label_text">Numéro de téléphone</string>
    <string name="tv_submit_reservation_activity_email_label_text">E-mail</string>
    <string name="tv_submit_reservation_activity_add_comment_label_text">Commentaires</string>
    <string name="et_submit_reservation_activity_write_comment_hint">Occasions spéciales, allergies, demandes spécifiques…</string>
    <string name="btn_submit_reservation_activity_submit_text">Terminer sa réservation</string>
    <string name="tv_working_hours_label_text">Horaires</string>
    <string name="tv_gallery_activity_gallery_label_text">Galerie</string>
    <string name="tv_help_activity_help_message_text">S\'il vous plaît écrivez-nous votre problème ou enquête afin que nous puissions vous aider.</string>
    <string name="et_help_activity_user_issue_hint">Votre message</string>
    <string name="btn_help_activity_send_text">Envoyer</string>
    <string name="tv_call_alert_dialog_call_label_text">Appeler</string>
    <string name="tv_cancel_reservation_alert_dialog_cancel_reservation_label_text">Suppression de réservation</string>
    <string name="tv_cancel_reservation_alert_dialog_message_text">Souhaitez vous supprimer votre réservation ?</string>
    <string name="tv_cancel_reservation_alert_dialog_action_cancel_text">Non</string>
    <string name="tv_cancel_reservation_alert_dialog_action_ok_text">Oui</string>
    <string name="tv_sign_out_alert_dialog_sign_out_label_text">Déconnexion</string>
    <string name="tv_sign_out_alert_dialog_dialog_message_text">Vous êtes sur le point de vous déconnecter, êtes-vous sür(e) ?</string>
    <string name="tv_sign_out_alert_dialog_action_cancel_text">Annuler</string>
    <string name="tv_sign_out_alert_dialog_action_sign_out_text">Déconnexion</string>
    <string name="tv_location_not_detected_oops_label_text">Oops!</string>
    <string name="tv_location_not_detected_error_message_text">Emplacement non détecté, réessayez.</string>
    <string name="tv_location_not_detected_action_retry_text">RECOMMENCEZ</string>
    <string name="retour">Retour</string>
    <string name="nos_categories">Nos catégories</string>
</resources>