<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/screen_left_margin"
        android:layout_marginRight="@dimen/screen_right_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_location_not_detected_oops_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_location_not_detected_oops_label_text"
            android:textSize="@dimen/app_text_size"
            android:textColor="@color/grey_707070"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_location_not_detected_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_location_not_detected_error_message_text"
            android:textSize="@dimen/app_text_size"
            android:textColor="@color/grey_707070"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_not_detected_oops_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_location_not_detected_action_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_location_not_detected_action_retry_text"
            android:textSize="@dimen/app_text_size"
            android:textColor="@color/pink"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_not_detected_error_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
