<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modifiedPrimaryColor"
    tools:context="com.example.alexander.halalappv1.activities.SearchRestaurantActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/modifiedPrimaryColor"
        tools:context="com.example.alexander.halalappv1.activities.SearchRestaurantActivity">


        <ImageView
            android:id="@+id/iv_search_restaurant_arrow_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_left_white"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_search_restaurant_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:includeFontPadding="false"
            android:text="@string/tv_search_restaurant_header_label_text"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_size"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/iv_search_restaurant_arrow_back"
            android:layout_marginTop="31dp" />

        <EditText
            android:id="@+id/et_search_restaurant_search"
            android:layout_below="@id/tv_search_restaurant_header_label"
            android:layout_width="384dp"
            android:layout_height="45dp"
            android:background="@color/search_edit_text_bg"
            android:drawableStart="@drawable/ic_text_view_search"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="40dp"
            android:hint="@string/et_search_restaurant_search_text_hint"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_777777"
            android:textSize="@dimen/app_text_size"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/cat_title"
            android:layout_below="@id/et_search_restaurant_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/nos_categories"
            android:textColor="@color/white"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/categories_recycler_view"
            android:layout_below="@id/cat_title"
            android:layout_margin="30dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:background="@color/modifiedPrimaryColor"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</ScrollView>
