<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    tools:context="com.example.alexander.halalappv1.activities.ConditionsActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/conditions_activity_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_header_max_height"
        android:background="@color/modifiedPrimaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_my_profile_label_text"
                android:textSize="@dimen/app_text_size"

                android:textColor="@color/black_2A2C34"
                android:fontFamily="@font/montserrat_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_profile_settings_label_text"
                android:textSize="@dimen/app_text_size"
                android:textColor="@color/pink"
                android:fontFamily="@font/opensans_regular"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/conditions_activity_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/retour"
            style="@style/backText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_D9D9D9"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_conditions_activity_conditions_of_utilization_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_about_halal_conditions_of_utilization_label_text"
        android:textSize="@dimen/app_text_size"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_regular"
        android:background="@color/modifiedPrimaryColor"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/screen_left_margin"
        android:paddingRight="@dimen/screen_right_margin"
        app:layout_constraintTop_toBottomOf="@id/conditions_activity_header_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_conditions_activity_conditions_of_utilization_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_conditions_activity_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/screen_left_margin"
            android:layout_marginRight="@dimen/screen_right_margin" />

    </ScrollView>

    <include
        android:id="@+id/pb_conditions_activity_loading_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        layout="@layout/layout_progress_bar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
