<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_bg_white_b_white_br_8">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cancel_reservation_alert_dialog_layout_header"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_cancel_reservation_alert_dialog_cancel_reservation_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_cancel_reservation_alert_dialog_cancel_reservation_label_text"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/avenir_heavy"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_cancel_reservation_alert_dialog_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_cancel_reservation_alert_dialog_message_text"
                android:textSize="@dimen/app_text_size"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tv_cancel_reservation_alert_dialog_cancel_reservation_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cancel_reservation_alert_dialog_layout_action"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/grey_707070"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_cancel_reservation_alert_dialog_action_ok"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tv_cancel_reservation_alert_dialog_action_ok_text"
                    android:textSize="@dimen/app_text_size"
                    android:textColor="@color/blueDialog"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"/>



                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_707070"/>


                <TextView
                    android:id="@+id/tv_cancel_reservation_alert_dialog_action_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tv_cancel_reservation_alert_dialog_action_cancel_text"
                    android:textSize="@dimen/app_text_size"
                    android:textColor="@color/blueDialog"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
